# tauri-fuzz

./: .gitignore  .gitmodules  .licensesnip  .licensesnipignore  Cargo.toml  Dockerfile  README.md  breakout-targets.md  diary.md  index.html  licensesnip.config.jsonc  typos.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml  build_test_mdbook.yml  deploy_mdbook.yml  spellcheck.yml
crates/LibAFL/libafl/: build.rs
crates/LibAFL/libafl_bolts/: Cargo.toml
crates/LibAFL/libafl_frida/: Cargo.toml
crates/appfuzz_rt/: Cargo.toml
crates/appfuzz_rt/src/: tauri.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: fuzz.rs  init.rs  main.rs  util.rs
crates/cli/template/: Cargo.crate-manifest  Cargo.toml  README.md  build.rs  tauri.conf.json
crates/cli/template/fuzz_targets/: _template_.rs  _template_full_.rs
crates/cli/tests/: cli_test.rs
crates/cli/tests/tauri-app/src-tauri/: Cargo.toml
crates/cli/tests/tauri-app/src-tauri/src/: greet.rs  lib.rs  main.rs
crates/fuzzer/: Cargo.toml  build.rs
crates/fuzzer/configuration/: toml_template.toml
crates/fuzzer/src/: from_random_bytes.rs  fuzzer.rs  fuzzer_options.rs  lib.rs  runtime.rs  tauri.rs  tauri_utils.rs
crates/fuzzer/src/runtime/: func_call_listener_rt.rs  instruction_listener_rt.rs
crates/fuzzer/src/tauri/: test_helpers.rs  utils.rs
crates/policies/: Cargo.toml
crates/policies/src/: engine.rs  lib.rs  policies.rs
crates/policies/src/policies/: execv.rs  external_process.rs  file_policy.rs  filesystem.rs  policy_template.rs  utils.rs
crates/tauri-fuzz/: Cargo.toml  build.rs
crates/tauri-fuzz-cli/: Cargo.toml  README.md
crates/tauri-fuzz-cli/src/: init.rs  main.rs  util.rs
crates/tauri-fuzz-cli/template/: Cargo.crate-manifest  build.rs  fuzzer_config.toml  tauri.conf.json
crates/tauri-fuzz-cli/tests/: cli_test.rs
crates/tauri-fuzz-policies/: Cargo.toml  README.md  build.rs
crates/tauri-fuzz-policies/src/: engine.rs  lib.rs  policies.rs
crates/tauri_fuzz_tools/: Cargo.toml  README.md
docs/: book.toml
docs/presentation/: README.md  index.html  main.js  package-lock.json  package.json  style.css
docs/src/: SUMMARY.md  diary.md  introduction.md  prerequisites.md  presentation.md  principle.md  principles.md
examples/mini-app/: README.md  package.json
examples/mini-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
examples/mini-app/src-tauri/assets/: foo.txt
examples/mini-app/src-tauri/capabilities/: main.json
examples/mini-app/src-tauri/fuzz/: Cargo.toml  tauri.conf.json
examples/mini-app/src-tauri/fuzz/fuzz_targets/: _template_.rs  _template_full_.rs  demo_backdoor.rs  demo_sql_injection.rs  direct_panic.rs  fopen.rs  fs_readFile.rs  fuzz_read_foo_full.rs  read_foo_file.rs  sql_transaction.rs  tauri_cmd_1.rs  tauri_cmd_2.rs  template.rs  utils.rs  write_foo_file.rs
examples/mini-app/src-tauri/fuzz/fuzzer/: fuzzer_options.rs
examples/mini-app/src-tauri/fuzz/fuzzer/policies/: file_policy.rs  policy_template.rs
examples/mini-app/src-tauri/fuzz_with_tests/: .gitignore  Cargo.toml  README.md  build.rs  fuzzer_config.toml
examples/mini-app/src-tauri/fuzz_with_tests/fuzz_targets/: demo_backdoor.rs  demo_sql_injection.rs  direct_panic.rs  fopen.rs  fs_readFile.rs  ls_with_rust.rs  read_foo_file.rs  sql_transaction.rs  tauri_cmd_1.rs  tauri_cmd_2.rs  write_foo_file.rs
examples/mini-app/src-tauri/src/: lib.rs  main.rs  tauri_commands.rs
examples/mini-app/src-tauri/src/tauri_commands/: basic.rs  demo.rs  external_process.rs  file_access.rs  libc_calls.rs  shell.rs  sql.rs
fuzzer/: .gitignore  Cargo.toml  README.md  build.rs  recipe.json
fuzzer-old/: Cargo.toml  README.md  breakout-targets.md  docker-dev_env.sh  log  recipe.json
fuzzer-old/src/: fuzzer.rs  main.rs  tauri_fuzz_tools.rs
fuzzer/src/: fuzzer.rs  harness.rs  main.rs  qemu.rs  tauri_fuzz_tools.rs  utils.rs
mini-app/: README.md  package.json
mini-app-fuzz/: Cargo.toml  README.md  tauri.conf.json
mini-app-fuzz/fuzz_targets/: demo_sql_injection.rs  direct_panic.rs  fopen.rs  fs_readFile.rs  read_foo_file.rs  sql_transaction.rs  tauri_cmd_1.rs  tauri_cmd_2.rs  template.rs  write_foo_file.rs
mini-app-fuzz/fuzzer/: fuzzer.rs  fuzzer_options.rs  lib.rs  policies.rs
mini-app-fuzz/fuzzer/policies/: file_policy.rs  policy_template.rs
mini-app/src/: index.html  main.js
mini-app/src-tauri/: .gitignore  Cargo.toml  recipe.json  tauri.conf.json
mini-app/src-tauri/frida-fuzz/: .gitignore  Cargo.toml  README.md  frida_fuzzer.rs  fuzz_utils.rs  tauri_cmd_1.rs  tauri_cmd_2.rs
mini-app/src-tauri/fuzz/: Cargo.toml  README.md  frida_fuzzer.rs  fuzz_utils.rs  fuzzer.rs  tauri_cmd_1.rs  tauri_cmd_2.rs  write_to_stdout.rs
mini-app/src-tauri/fuzz/fuzz_targets/: bin_sh.rs  demo_backdoor.rs  direct_panic.rs  fopen.rs  fs_readFile.rs  fuzz_target_1.rs  fuzz_target_2.rs  geteuid.rs  read_foo_file.rs  tauri_bin_sh.rs  tauri_cmd_1.rs  tauri_cmd_2.rs  write_foo_file.rs  write_read_tmp_file.rs  write_to_stdout.rs
mini-app/src-tauri/fuzz/fuzzer/: fuzzer.rs  fuzzer_options.rs  lib.rs  policies.rs
mini-app/src-tauri/fuzz/fuzzer/policies/: file_policy.rs
mini-app/src-tauri/src/: commands.rs  lib.rs  main.rs  shell_injection.rs  tauri_commands.rs
mini-app/src-tauri/src/tauri_commands/: basic.rs  demo.rs  direct_syscalls.rs  file_access.rs  libc_calls.rs  shell.rs  sql.rs
notes/: biblio.md  diary.md
tauri_fuzz_tools/: Cargo.toml  README.md
tauri_fuzz_tools/src/: fuzz_utils.rs  fuzzer.rs  lib.rs  libc_instrumented_functions.rs  policies.rs  test_utils.rs
tests/fuzz-mini-app/: Cargo.toml  README.md  build.rs  tauri.conf.json
tests/fuzz-mini-app/src/: lib.rs  main.rs  utils.rs
tests/fuzz-mini-app/tests/: fuzz_tests_mini_app.rs
tests/fuzz-mini-app/tests/common/: mod.rs
tests/fuzz-mini-app/tests/mini_app_commands_tests/: direct_panic_tests.rs  fopen_tests.rs  fs_readFile_tests.rs  ls_with_rust_command_tests.rs  mod.rs  read_foo_file_tests.rs  sql_transaction_tests.rs  tauri_cmd_1_tests.rs  tauri_cmd_2_tests.rs  write_foo_file_tests.rs
(+64 files in other folders)
