[workspace]
resolver = "2"
members = [
  # Crates
  "crates/fuzzer",
  "crates/policies",
  "crates/cli",
  # Examples
  "examples/mini-app/src-tauri",
  # Tests
  "tests/fuzz-mini-app"
]
exclude = ["./crates/LibAFL"]

[workspace.dependencies]
frida-gum = { version = "0.13.2", features = [
  "auto-download",
  "event-sink",
  "invocation-listener",
] }


libafl = { path = "./crates/LibAFL/libafl", features = [
  "std",
  "llmp_compression",
  "llmp_bind_public",
  "frida_cli",
] }
libafl_bolts = { path = "./crates/LibAFL/libafl_bolts" }
libafl_frida = { path = "./crates/LibAFL/libafl_frida", features = ["cmplog"] }
libafl_targets = { path = "./crates/LibAFL/libafl_targets", features = [
  "sancov_cmplog",
] }
policies = { path = "./crates/policies" }
fuzzer = { path = "./crates/fuzzer" }
mini-app = { path = "./examples/mini-app/src-tauri" }

tauri = { version = "2.0.0-rc", features = ["test", "tracing"] }
tauri-runtime = { version = "2.0.0-rc", features = [] }
tauri-build = { version = "2.0.0-rc", features = [] }
tauri-utils = { version = "2.0.0-rc", features = [] }
tauri-plugin-fs = "2.0.0-rc"

[workspace.package]
authors = ["CrabNebula Ltd.", "Alexandre Dang"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/crabnebula-dev/tauri-fuzzer"


