[workspace]
resolver = "2"
members = [
  # Crates
  "crates/appfuzz_rt",
  "crates/policies",
  "crates/cli",
  # Examples
  "examples/mini-app/src-tauri",
  # Tests
  "tests/fuzz-mini-app"
]
exclude = ["./crates/LibAFL"]

[workspace.package]
authors = ["CrabNebula Ltd.", "Alexandre Dang"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/crabnebula-dev/tauri-fuzzer"

[workspace.dependencies]
frida-gum = { version = "0.13.2", features = [
  "auto-download",
  "event-sink",
  "invocation-listener",
] }

libafl = "0.13"
libafl_bolts = "0.13"
libafl_frida = {version = "0.13", features = ["cmplog"]}
libafl_targets = { version = "0.13", features = ["sancov_cmplog"]}

policies = { path = "./crates/policies" }
appfuzz_rt = { path = "./crates/appfuzz_rt" }
mini-app = { path = "./examples/mini-app/src-tauri" }

tauri = { version = "2.0", features = ["test", "tracing"] }
tauri-runtime = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }
tauri-utils = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"



