[workspace]
resolver = "2"
members = [
  # Crates
  "crates/tauri-fuzz",
  "crates/tauri-fuzz-policies",
  "crates/tauri-fuzz-cli",
  # Examples
  "examples/mini-app/src-tauri",
  # Tests
  "tests/fuzz-mini-app"
]
exclude = ["./crates/LibAFL"]

[workspace.package]
authors = ["CrabNebula Ltd.", "Alexandre Dang"]
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/crabnebula-dev/tauri-fuzz"

[workspace.dependencies]
frida-gum = { version = "0.13.2", features = [
  "auto-download",
  "event-sink",
  "invocation-listener",
] }

libafl = "0.13"
libafl_bolts = "0.13"
libafl_frida = {version = "0.13", features = ["cmplog"]}
libafl_targets = { version = "0.13", features = ["sancov_cmplog"]}

tauri-fuzz-policies = { path = "./crates/tauri-fuzz-policies" }
tauri-fuzz = { path = "./crates/tauri-fuzz" }
mini-app = { path = "./examples/mini-app/src-tauri" }

tauri = { version = "2.0", features = ["test", "tracing"] }
tauri-runtime = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }
tauri-utils = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"



