[package]
name = "mini-app-fuzzer"
version = "0.10.0"
authors = []
edition = "2021"

[features]
default = []
qemu = ["dep:libafl_qemu"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
# libafl = "0.10.1"
# libafl_qemu = { version = "0.10.1", optional = true }
# libafl_targets = { version = "0.10.1", features = ["sancov_pcguard_hitcounts"] }
libafl = { path = "../../LibAFL/libafl" }
libafl_qemu = { path = "../../LibAFL/libafl_qemu", optional = true }
libafl_targets = { path = "../../LibAFL/libafl_targets", features = ["sancov_pcguard_hitcounts"] }

mini-app = { path = "../mini-app/src-tauri/" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dependencies.tauri]
# path = "../../../tauri-apps/tauri/core/tauri/"
git = "ssh://git@github.com/crabnebula-dev/tauri-for-fuzzy.git"
default-features = false
features = ["fuzz"]

[dependencies.tauri-runtime]
# path = "../../../tauri-apps/tauri/core/tauri-runtime"
git = "ssh://git@github.com/crabnebula-dev/tauri-for-fuzzy.git"



