[package]
name = "mini-app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
log = "0.4"
env_logger = "*"
color-backtrace = "0.6"
tauri = { workspace = true, features = ["api-all"] }
tauri-utils = { workspace = true }
tauri_fuzz_tools = { workspace = true }
mini-app = { path = "../mini-app/src-tauri" }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
libafl_frida = { workspace = true }
libafl_targets = { workspace = true }
frida-gum = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[target.'cfg(target_env = "msvc")'.dependencies]
windows-sys = "0.52"

[lib]
name = "fuzzer"
path = "fuzzer/lib.rs"

[[bin]]
name = "tauri_cmd_1"
path = "fuzz_targets/tauri_cmd_1.rs"
doc = false

[[bin]]
name = "tauri_cmd_2"
path = "fuzz_targets/tauri_cmd_2.rs"
doc = false

[[bin]]
name = "fopen"
path = "fuzz_targets/fopen.rs"
doc = false

[[bin]]
name = "write_foo_file"
path = "fuzz_targets/write_foo_file.rs"
doc = false

[[bin]]
name = "read_foo_file"
path = "fuzz_targets/read_foo_file.rs"
doc = false

[[bin]]
name = "direct_panic"
path = "fuzz_targets/direct_panic.rs"
doc = false

[[bin]]
name = "fs_readFile"
path = "fuzz_targets/fs_readFile.rs"

[[bin]]
name = "sql_transaction"
path = "fuzz_targets/sql_transaction.rs"
doc = false

[[bin]]
name = "demo_backdoor"
path = "fuzz_targets/demo_backdoor.rs"
test = false
doc = false

[[bin]]
name = "demo_sql_injection"
path = "fuzz_targets/demo_sql_injection.rs"
test = false
doc = false
