[package]
name = "tauri_fuzz_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = "1.0"
log = "0.4"

# libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", features = [ "std", "llmp_compression", "llmp_bind_public", "frida_cli" ] } #,  "llmp_small_maps", "llmp_debug"]}
# libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git" }
# libafl_frida = { git = "https://github.com/AFLplusplus/LibAFL.git", features = ["cmplog"] }
# libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", features = ["sancov_cmplog"] }
libafl = { path = "../../LibAFL/libafl", features = [ "std", "llmp_compression", "llmp_bind_public", "frida_cli" ] } #,  "llmp_small_maps", "llmp_debug"]}
libafl_bolts = { path = "../../LibAFL/libafl_bolts"}
libafl_frida = { path = "../../LibAFL/libafl_frida", features = ["cmplog"] }
libafl_targets = { path = "../../LibAFL/libafl_targets", features = ["sancov_cmplog"] }

frida-gum = { version = "0.13.2", features = [ "auto-download", "event-sink", "invocation-listener"] }
mimalloc = { version = "*", default-features = false }

[dependencies.tauri]
path = "../../cn-tauri/core/tauri"
# git = "ssh://git@github.com/crabnebula-dev/tauri.git"
# branch = "feat/fuzz"
# default-features = false
features = ["test"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

