[package]
name = "tauri_fuzz_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = "1.0"
log = "0.4"
tauri = { workspace = true }


frida-gum = { version = "0.13.2", features = [ "auto-download", "event-sink", "invocation-listener"] }
mimalloc = { version = "*", default-features = false }
libafl = { workspace = true }
libafl_bolts = { workspace = true }
libafl_frida = { workspace = true }
libafl_targets = { workspace = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

