[package]
name = "fuzzer-cli"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "cargo-tauri-fuzz"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
handlebars = "5.1.2"
ignore = "0.4.22"
include_dir = "0.7"
log = "0.4"
serde = "1"
toml = "0.8"

[target.'cfg(target_os = "linux")'.dev-dependencies]
sysinfo = "0.30"
