[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { workspace = true }
libafl_bolts = { workspace = true }
libafl_frida = { workspace = true }
libafl_targets = { workspace = true }
frida-gum = { workspace = true }
color-backtrace = "0.6.1"
env_logger = "0.11.3"
policies = { workspace = true }
serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.115", optional = true }
tauri = { workspace = true, optional = true }

[features]
tauri = ["dep:serde", "dep:serde_json", "dep:tauri"]
