[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { workspace = true }
libafl_bolts = { workspace = true }
libafl_frida = { workspace = true }
libafl_targets = { workspace = true }
frida-gum = { workspace = true }
color-backtrace = "0.6.1"
env_logger = "0.11.3"
policies = { workspace = true }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.115", optional = true }
tauri = { workspace = true, optional = true }
tauri-utils = { workspace = true }
log = "0.4"
toml = "0.8"

# Intruction listener dependencies TODO update these
capstone = { version = "0.11.0", optional = true }
frida-gum-sys = { version = "0.13.2", features = [
  "invocation-listener",
] , optional = true }

# Function calls listener dependencies
rangemap = { version = "1.3" }


[dev-dependencies]
tauri-plugin-fs = { workspace = true }

[features]
default = []
tauri = ["dep:serde_json", "dep:tauri"]
instr_listener = ["dep:capstone", "dep:frida-gum-sys"]
