[package]
name = "mini-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["dylib"]

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
log = "0.4"
env_logger = "*"

[dependencies.tauri]
# path = "../../../cn-tauri/core/tauri"
git = "ssh://git@github.com/crabnebula-dev/tauri.git"
branch = "feat/fuzz"
default-features = false
features = ["test"]

[dependencies.tauri-runtime]
# path = "../../../cn-tauri/core/tauri-runtime"
git = "ssh://git@github.com/crabnebula-dev/tauri.git"
branch = "feat/fuzz"
