[package]
name = "mini-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[lib]
# crate-type = ["dylib", "rlib"]
crate-type = ["dylib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
log = "0.4"
env_logger = "*"
tauri = { workspace = true }
tauri_fuzz_tools = { path = "../../tauri_fuzz_tools" }
libc = "*"
tempfile = "3.8"


# [dependencies.tauri-runtime]
# # path = "../../../cn-tauri/core/tauri-runtime"
# git = "ssh://git@github.com/crabnebula-dev/tauri.git"
# branch = "feat/fuzz"
