[package]
name = "mini-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
repository = ""
edition = "2021"
rust-version = "1.57"

[lib]
# crate-type = ["dylib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
log = "0.4"
env_logger = "*"
tauri = { workspace = true }
tauri_fuzz_tools = { workspace = true }
libc = "*"
