[package]
name = "fuzz-mini-app"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
mini-app = { workspace = true }
policies = { workspace = true }
fuzzer = { workspace = true, features = ["tauri"] }
frida-gum = { workspace = true }
tauri = { workspace = true }
tauri-utils = { workspace = true }
libafl = { workspace = true }
tauri-plugin-fs = { workspace = true}
serde = { version = "1.0.197" }
color-backtrace = "0.6.1"
