[package]
name = "fuzz-mini-app"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
mini-app = { workspace = true }
policies = { workspace = true }
appfuzz_rt = { workspace = true, features = ["tauri"] }

tauri = { workspace = true }
tauri-utils = { workspace = true }
libafl = { workspace = true }
tauri-plugin-fs = { workspace = true}
serde = { version = "1.0.197" }
color-backtrace = "0.6.1"
env_logger = "0.11"
