[package]
name = "mini-app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
# libfuzzer-sys = "0.4"
libfuzzer-sys = { version = "0.11.1", features = [], package = "libafl_libfuzzer" }

[dependencies.mini-app]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "tauri_cmd_1"
path = "fuzz_targets/tauri_cmd_1.rs"
test = false
doc = false

[[bin]]
name = "tauri_cmd_2"
path = "fuzz_targets/tauri_cmd_2.rs"
test = false
doc = false

[[bin]]
name = "bin_sh"
path = "fuzz_targets/bin_sh.rs"
test = false
doc = false
