[package]
name = "mini-app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = "2.0"

[dependencies]
mini-app = { path = ".." }
# We use the workspace crates for this particular case but you should use the upstream versions
tauri-fuzz = { path = "../../../../crates/tauri-fuzz", features = ["tauri"] }
tauri-fuzz-policies = { path = "../../../../crates/tauri-fuzz-policies"}
tauri = { version = "2.0", features = ["test"]}
libafl = "0.13"

# Uncomment this block to add `fuzz_read_foo` as a fuzz target
[[bin]]
name = "fuzz_read_foo"
path = "fuzz_targets/fuzz_read_foo.rs"
doc = false

# Uncomment this block to add `fuzz_read_foo_full` as a fuzz target
[[bin]]
name = "fuzz_read_foo_full"
path = "fuzz_targets/fuzz_read_foo_full.rs"
doc = false
