[package]
name = "mini-app-fuzz-tests"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
mini-app = { path = ".." }
policies = { workspace = true }
fuzzer = { workspace = true, features = ["tauri"] }
frida-gum = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tauri = { workspace = true }
tauri-utils = { workspace = true }
libafl = { workspace = true }
tauri-plugin-fs = { workspace = true}

[[bin]]
name = "tauri_cmd_1"
path = "fuzz_targets/tauri_cmd_1.rs"
doc = false

[[bin]]
name = "tauri_cmd_2"
path = "fuzz_targets/tauri_cmd_2.rs"
doc = false

[[bin]]
name = "fopen"
path = "fuzz_targets/fopen.rs"
doc = false

[[bin]]
name = "write_foo_file"
path = "fuzz_targets/write_foo_file.rs"
doc = false

[[bin]]
name = "read_foo_file"
path = "fuzz_targets/read_foo_file.rs"
doc = false

[[bin]]
name = "direct_panic"
path = "fuzz_targets/direct_panic.rs"
doc = false

[[bin]]
name = "fs_readFile"
path = "fuzz_targets/fs_readFile.rs"
doc = false

[[bin]]
name = "sql_transaction"
path = "fuzz_targets/sql_transaction.rs"
doc = false

[[bin]]
name = "demo_backdoor"
path = "fuzz_targets/demo_backdoor.rs"
test = false
doc = false

[[bin]]
name = "demo_sql_injection"
path = "fuzz_targets/demo_sql_injection.rs"
test = false
doc = false

[[bin]]
name = "ls_with_rust"
path = "fuzz_targets/ls_with_rust.rs"
doc = false
